--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ralphwetzel/node-red-contrib-eta",
-  "version": "1.0.0-rc.4",
+  "version": "1.0.0",
   "description": "A node to utilize Eta - the lightweight, powerful, pluggable embedded JS template engine.",
   "main": "eta.js",
   "scripts": {
