--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ralphwetzel/node-red-contrib-eta",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A node to utilize Eta - the lightweight, powerful, pluggable embedded JS template engine.",
   "main": "eta.js",
   "scripts": {
@@ -22,15 +22,15 @@
 	},
   "license": "MIT",
   "dependencies": {
-    "eta": "^1.12.3"
+    "eta": ">=3.0.0"
   },
   "node-red" : {
-    "version": ">=2.0.0",
+    "version": ">=2.1.0",
     "nodes": {
         "eta": "eta.js"
     }
   },
   "engines": {
-      "node": ">=12.0.0"
+      "node": ">=14.0.0"
   }
 }
